repaired broken styles

--- a/slideshow.css
+++ b/slideshow.css
@@ -89,9 +89,8 @@ a:hover {
   background: #ff0090;
   border-bottom: 1pt solid transparent;
 }
-a:active, a:visited {
+a:active, a:visited, a:link {
   text-decoration:none;
-    color:black;
 }
 h1 a {
 	border: none;
